[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.1584, 27.6578 )

[sub_resource type="CircleShape2D" id=2]
radius = 143.402

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GunPivot" type="Position2D" parent="."]
editor/display_folded = true

[node name="GunPosition" type="Position2D" parent="GunPivot"]
position = Vector2( 46.0975, 0 )

[node name="Gun" parent="GunPivot/GunPosition" instance=ExtResource( 3 )]
position = Vector2( 31.6977, 0 )

[node name="AbsorbArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AbsorbArea"]
shape = SubResource( 2 )

